# Real-Time-Face-Filtering

./: .gitignore  CMakeLists.txt  README.md  Readme.txt  project  project.cpp  render_face.hpp
Comp408/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  Assembly-UnityScript-Editor-firstpass.unityproj  Comp408.sln  Comp408.userprefs
Comp408/Assets/: Glasses.blend  Glasses.cs  Main.unity  WebCam.cs
Comp408/Assets/Materials/: Black.mat  Plastic.mat  unnamed.mat
Comp408/QCAR/: somedata16
